option('use_guile_site', type: 'boolean', value: true, description: 'infer installation paths from guile pkgconfig')
option('compile_modules', type: 'boolean', value: true, description: 'compile guile modules')
option('mtrace', type: 'boolean', value: false, description: 'compile with GCC memory tracing')
