exampledir = $(datadir)/doc/guile-gi
dist_example_DATA = \
  example-1.scm \
  example-1b.scm \
  example-1c.scm \
  browser.scm \
  editor.scm

emptywindowdir = $(datadir)/doc/guile-gi/empty-window
dist_emptywindow_DATA = \
 empty-window/main.scm \
 empty-window/empty-app.scm \
 empty-window/empty-app-window.scm

builderdir = $(datadir)/doc/guile-gi/builder
dist_builder_DATA = \
 builder/main.scm \
 builder/builder.ui
